# devtribunal

./: .gitignore  .mcp.json  CONCEPT.md  Cargo.toml  README.md  install.sh  package.json
.github/workflows/: release.yml
Formula/: devtribunal.rb
agents/: architect.md  check_docs.md  check_project_docs.md  manager.md  review_c.md  review_config.md  review_cpp.md  review_csharp.md  review_dart.md  review_frontend.md  review_go.md  review_java.md  review_lua.md  review_migrations.md  review_php.md  review_protobuf.md  review_python.md  review_rust.md  review_shell.md  review_sql.md  review_tests.md  review_typescript.md
rust/src/: backend.rs  findings.rs  lang.rs  main.rs  mcp.rs  runner.rs  shell.rs  types.rs
rust/src/tools/: blast_radius.rs  check_deps.rs  check_patterns.rs  check_secrets.rs  check_tests.rs  check_tools.rs  check_tracking.rs  diff_findings.rs  init.rs  linter.rs  mod.rs  orchestrate.rs  review.rs  run_tests.rs
src/: agent-loader.ts  index.ts  runner-alternatives.ts  server.ts  types.ts
src/tools/: check-tools.ts  init.ts  linter.ts  orchestrate.ts  review.ts
src/utils/: shell.ts
templates/skills/: converge.md  full.md  incremental-pr-ready.md  incremental-staged.md  incremental-wip.md
