[package]
name = "devtribunal"
version = "0.5.0"
edition = "2021"
description = "MCP server where each tool is a specialist code review agent"
license = "MIT"
repository = "https://github.com/christophergutierrez/devtribunal"
homepage = "https://github.com/christophergutierrez/devtribunal"
categories = ["development-tools", "command-line-utilities"]
keywords = ["mcp", "code-review", "agents"]

[[bin]]
name = "devtribunal"
path = "rust/src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
